--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,38 +11,40 @@
 </head>
 
 <body>
-  <header>
-    <div class="header-authentication">
-      <a href="/auth/signup">Signup</a>
-      <span> | </span>
-      <a href="/auth/login">Login</a>
-      <span> | </span>
-      <a href="/auth/logout">Logout</a>
-    </div>
-    <nav class="header-menu">
-      <a href="/">Home</a>
-      <a href="/movie">Movies</a>
-      <a href="/cinema">Cinemas & Tickets</a>
-      <a href="/profile">Profile</a>
-    </nav>
-    <nav class="header-menu-mobile">
-      <a href="/"><img src="/images/003-home.png" alt="Home"></a>
-      <a href="/movie"><img src="/images/001-movie.png" alt="Movies"></a>
-      <a class="header-tickets" href="/cinema"><img src="/images/004-ticket.png" alt="Tickets"></a>
-      <a href="/profile"><img src="/images/002-user.png" alt="Profile"></a>
-    </nav>
-  </header>
+  <div class="body-content">
+    <header>
+      <div class="header-authentication">
+        <a href="/auth/signup">Signup</a>
+        <span> | </span>
+        <a href="/auth/login">Login</a>
+        <span> | </span>
+        <a href="/auth/logout">Logout</a>
+      </div>
+      <nav class="header-menu">
+        <a href="/">Home</a>
+        <a href="/movie">Movies</a>
+        <a href="/cinema">Cinemas & Tickets</a>
+        <a href="/profile">Profile</a>
+      </nav>
+      <nav class="header-menu-mobile">
+        <a href="/"><img src="/images/003-home.png" alt="Home"></a>
+        <a href="/movie"><img src="/images/001-movie.png" alt="Movies"></a>
+        <a class="header-tickets" href="/cinema"><img src="/images/004-ticket.png" alt="Tickets"></a>
+        <a href="/profile"><img src="/images/002-user.png" alt="Profile"></a>
+      </nav>
+    </header>
 
-  {{{body}}} 
+    {{{body}}}
 
-  <footer>
-    <a href="/about">About</a>
-    <span> | </span>
-    <a href="/contact">Contact</a>
-    <span> | </span>
-    <a href="#">Social</a>
-  </footer>
- 
+    <footer>
+      <a href="/about">About</a>
+      <span> | </span>
+      <a href="/contact">Contact</a>
+      <span> | </span>
+      <a href="#"><img src="/images/fb.png" alt="facebook"></a>
+    </footer>
+
+  </div>
 
   <script src="/javascripts/script.js"></script>
 </body>
