--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,6 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{title}}</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet">
+  {{!-- tippy.js CSS files starts--}}
+  <link rel="stylesheet" href="https://unpkg.com/tippy.js@4/themes/light.css" />
+  <link rel="stylesheet" href="https://unpkg.com/tippy.js@4/themes/light-border.css" />
+  <link rel="stylesheet" href="https://unpkg.com/tippy.js@4/themes/google.css" />
+  <link rel="stylesheet" href="https://unpkg.com/tippy.js@4/themes/translucent.css" />
+   {{!-- tippy.js CSS files ends--}}
   <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
 
