--- a/views/tickets/ticket-selection_sp.hbs
+++ b/views/tickets/ticket-selection_sp.hbs
@@ -15,7 +15,8 @@
   <div id="reservation">
     <h2>Your order - <span id="number-of-tickets">0</span> ticket(s)</h2>
 
-    <div id="selected-seats"></div>
+    <div id="selected-seats"></div><br/>
+    <div><span class="price">Total price: </span><span id='total-price' class="price">0</span><span class="price">eur</span></div><br/>
     <div><button id="book-movie" type="submit">make reservation</button></div>
 
   </div>
