--- a/views/admin/screening-to-add.hbs
+++ b/views/admin/screening-to-add.hbs
@@ -1,7 +1,7 @@
 <h1>You are adding new screening in cinema {{cinema.name}}</h1>
 
 <form action="/admin/add-screening/{{cinema._id}}/" id="add-screening" method="post">
-  <h3>Select the room for screening</h3>
+  <h2>Select the room for screening</h2>
 
   <fieldset id="roomID">
     {{#each cinema.rooms}}
@@ -9,20 +9,25 @@
     {{/each}}
   </fieldset>
 
-  <h3>Select date for screening:</h3>
+  <h2>Select date for screening:</h2>
   <input type="date" id="screening-date" name="date" disabled required>
 
-  <h3>Select the movie for screening</h3>
+  <h2>Price:</h2>
+  <input type="number" id="movie-price" name="price">
+
+  <h2>Select the movie for screening</h2>
   <fieldset id="movieID">
     {{#each movie}}
     <input class='admin-input' type="radio" value={{_id}} name="movieID" required> {{title}}</input><br>
     {{/each}}
-  </fieldset>
-  <fieldset id="timeStart">
+  </fieldset><br/>
+
+  <h2 id="timeStart-h3" class="not-visible">Select time for screening</h2>
+  <fieldset id="timeStart" class="not-visible">
     <div id="time-slot">
 
     </div>
-  </fieldset>
+  </fieldset><br />
 
   <button type="submit">create screening</button>
 </form>
