--- a/views/profile/edit-password.hbs
+++ b/views/profile/edit-password.hbs
@@ -10,7 +10,7 @@
     <div class="formInput">
       <input id="password" type="password" name="password" required>
       <input id="new-password" type="password" name="newPassword" required>
-      <progress id="strength" max="100" value="0"></progress>
+      <progress id="strength" max="100" value="0"></progress><span id="strong-or-weak"></span>
     </div>
 
   </div>
@@ -22,4 +22,8 @@
   <button id="changePassword" disabled>Confirm change</button>
 </form>
 
+{{!-- tippy.js scripts starts --}}
+<script src="https://unpkg.com/popper.js@1"></script>
+<script src="https://unpkg.com/tippy.js@4"></script>
+{{!-- tippy.js scripts starts --}}
 <script src="/javascripts/edit-password.js"></script>
