--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -100,6 +100,8 @@ header {
 .header-menu a { 
   background-color: white;
   color: black;
+  border-top: 3px solid #B5E5BF;
+  // border-bottom: 3px solid #FE4A28;
 }
 
 .header-menu-mobile {
@@ -155,6 +157,7 @@ footer a img {
   padding: 10px;
   border-radius: 10px;
   margin: 20px 0;
+  display: table;
 }
 
 .message-pos {
@@ -163,6 +166,7 @@ footer a img {
   border-radius: 10px;
   margin: 20px 0;
   color: black;
+  display: table;
 }
 // (User) status messages - end
 // ------------------------------------
@@ -176,7 +180,7 @@ footer a img {
 
 .movie-overview {
   display: flex;
-  margin: 10px 10px 0;
+  margin: 10px 10px 0 0;
   background-color: black;
 }
 
@@ -437,21 +441,11 @@ label {
   color: rgb(175, 174, 174);
 }
 // User forms - end
-// ------------------------------------
+// ------------------------------------ 
 
 
-label {
-  margin-right: 10px;
-}
-
-::placeholder {
-  color: rgb(175, 174, 174);
-}
-
-// -- end Forms -----
-
-
-//-- password progress bar ---
+// ------------------------------------ 
+// progress bar - start
 progress {
   /* Reset the default appearance */
   -webkit-appearance: none;
@@ -537,11 +531,12 @@ progress {
 .progress-100::-moz-progress-bar {
   background-color: green;
 }
-//--end  progress bar --
+// progress bar - end
+// ------------------------------------ 
 
 
-
-//--button on signup.hbs start--
+// ------------------------------------ 
+// button signup - start
 #signup:disabled {
   background-color: grey;
 }
@@ -549,14 +544,24 @@ progress {
 #changePassword:disabled {
   background-color: grey;
 }
-//button on signup.hbs end --
+// button signup - end
+// ------------------------------------ 
 
 
+// ------------------------------------ 
+// profile - start
+// .profile-ticket-overview {
+//   background-color: red;
+// }
+.profile-ticket-overview:nth-child(2) {
+  background-color: red;
+  color: white;
+}
 
 
-// ----------------------
+// ------------------------------------ 
 // MEDIA QUERIES
-// ----------------------
+// ------------------------------------ 
 
 // > tablet. Display header
 @media screen and (min-width: 701px) {
@@ -627,7 +632,7 @@ progress {
   .header-menu-mobile {
     display: flex;
     justify-content: space-between;
-    background-color: #CCD4E1;
+    background-color: white;
     margin-bottom: 10px;
   }
 
